refactor: standardize logger constants and modernize code patterns
- Add MOCK_LOGGER category (karate.mock) for MockServer/MockHandler
- Use LogContext.*_LOGGER constants instead of inline strings
- Use pattern matching (instanceof List<?> list) in KarateJsApi
- Use switch expression for proxy config in ApacheHttpClient
- Use getLast() instead of get(size()-1) in ScenarioResult
- Simplify LogWriter to only essential methods
- Set logback-test.xml to INFO level for less noise

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>